// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="TournamentCards-root-63"
>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="not-found"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          No Tournaments Found
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="TournamentCards-root-63"
>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock0"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test0
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        3 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-126"
    >
      <a
        className="MuiButtonBase-root-152 MuiButton-root-128 MuiButton-text-130 MuiButton-flat-133 MuiButton-sizeSmall-149 TournamentCards-right-65 MuiCardActions-action-127"
        href="/tournament/mock0"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-129"
        >
          Continue
        </span>
        <span
          className="MuiTouchRipple-root-155"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock1"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test1
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat1
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        8 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        6 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-126"
    >
      <a
        className="MuiButtonBase-root-152 MuiButton-root-128 MuiButton-text-130 MuiButton-flat-133 MuiButton-sizeSmall-149 TournamentCards-right-65 MuiCardActions-action-127"
        href="/tournament/mock1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-129"
        >
          Details
        </span>
        <span
          className="MuiTouchRipple-root-155"
        />
      </a>
    </div>
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock2"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test2
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Active Players
      </p>
    </div>
    <div
      className="MuiCardActions-root-126"
    >
      <a
        className="MuiButtonBase-root-152 MuiButton-root-128 MuiButton-text-130 MuiButton-flat-133 MuiButton-sizeSmall-149 TournamentCards-right-65 MuiCardActions-action-127"
        href="/new/mock2"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-129"
        >
          Continue
        </span>
        <span
          className="MuiTouchRipple-root-155"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="TournamentCards-root-63"
>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock0"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test0
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        3 Active Players
      </p>
    </div>
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock1"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test1
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat1
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        8 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        6 Active Players
      </p>
    </div>
  </div>
  <div
    className="MuiPaper-root-67 MuiPaper-elevation1-70 MuiPaper-rounded-68 MuiCard-root-66 TournamentCards-card-64"
    id="mock2"
  >
    <div
      className="MuiCardHeader-root-94"
    >
      <div
        className="MuiCardHeader-content-97"
      >
        <span
          className="MuiTypography-root-100 MuiTypography-headline-105 MuiCardHeader-title-98"
        >
          test2
        </span>
        <span
          className="MuiTypography-root-100 MuiTypography-body1-109 MuiTypography-colorTextSecondary-123 MuiCardHeader-subheader-99"
        >
          cat0
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-125"
    >
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Total Players
      </p>
      <p
        className="MuiTypography-root-100 MuiTypography-body1-109"
      >
        4 Active Players
      </p>
    </div>
  </div>
</div>
`;
